VeraSandBox2016/src/objects/Profile_Record__c.object
<CustomObject>
    <fields>
        <fullName>Able_to_draft_report_without_translator__c</fullName>
        <label>Able to Draft Report Without Translator</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Checks if Expert&apos;s Roster Status is &quot;O&quot; (for On Roster)</description>
        <formula>ISPICKVAL( Expert__r.Roster_Status__c , &quot;O&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AoE_Type__c</fullName>
        <formula>TEXT(Entry_from_Catalog__r.Item_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AoE Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_Conduct_Interview_Without_Interpret__c</fullName>
        <label>Can Conduct Interview Without Interpret</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_Funtion_in_a_Professional_Setting__c</fullName>
        <label>Can Funtion in a Professional Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Expertise1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Countries_of_Jurisdiction__c</fullName>
        <description>From global picklist</description>
        <inlineHelpText>Please select the country-ies that apply to your expertise</inlineHelpText>
        <label>Countries of Jurisdiction</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_of_Study__c</fullName>
        <label>Course of Study</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Degree_Name__c</fullName>
        <label>Degree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <inlineHelpText>V = Vocational Diploma
B = Bachelor
GD = Graduate Diploma
M = Master
CAGS = Certificate of Advanced Graduate Study
D = Doctorate</inlineHelpText>
        <label>Degree Type</label>
        <picklist>
            <picklistValues>
                <fullName>VD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duties__c</fullName>
        <label>Duties</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duty_Station_City__c</fullName>
        <label>Duty Station City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duty_Station_Country__c</fullName>
        <description>From global picklist</description>
        <label>Duty Station Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address_1__c</fullName>
        <description>Referee Email 1</description>
        <label>Email Address 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address_2__c</fullName>
        <description>Referee back-up email</description>
        <label>Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Leave blank if current</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_from_Catalog__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entry from Catalog</label>
        <referenceTo>Catalog__c</referenceTo>
        <relationshipLabel>Profile Records</relationshipLabel>
        <relationshipName>Profile_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Profile Records</relationshipLabel>
        <relationshipName>Expertise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expertise_Category__c</fullName>
        <description>This is a hidden field that is used by the Expert Search VF page to populate the Level 2 filter picklist values. It returns the Catalog&apos;s Category value for Area of Expertise and Profession, otherwise it returns a blank value.</description>
        <formula>IF( RecordType.Name=&quot;Area of Expertise&quot;,   TEXT(Entry_from_Catalog__r.AoE_Category__c) ,  TEXT(Entry_from_Catalog__r.Profession_Category__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expertise Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <label>Explanation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Level__c</fullName>
        <label>General Level</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother Tongue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_South__c</fullName>
        <description>Pulls down Global South value for the Nationality. For use in Expert Search VF page, not displayed on Expertise record page layout.</description>
        <formula>ISPICKVAL( Entry_from_Catalog__r.DAC_List__c , &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global South</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JRR_Language__c</fullName>
        <label>JRR Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Level_Number__c</fullName>
        <description>This is a hidden field that translates JRR&apos;s General Language Levels from text to numbers, which the Expert Search VF page uses to evaluate &quot;at least X level&quot; language skill. If JRR changes the General Level picklist values, make sure to update the formula accordingly.</description>
        <formula>IF( ISPICKVAL(General_Level__c, &quot;Basic&quot;), 1,
  IF(ISPICKVAL(General_Level__c, &quot;Fair&quot;), 2,
   IF(ISPICKVAL(General_Level__c, &quot;Proficient&quot;), 3,
    IF(ISPICKVAL(General_Level__c, &quot;Fluent&quot;), 4,
     IF(ISPICKVAL(General_Level__c, &quot;Mother Tongue&quot;),5,
      0)
     )
    )
   )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Level Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>If the person speaks english, french or spanish, please indicate which. If not, please indicate which language the person speaks.</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_System_Explanation__c</fullName>
        <inlineHelpText>Explain how you acquired the expertise with concrete examples (&quot;from my work&quot; will not suffice).</inlineHelpText>
        <label>Legal System Explanation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Months_Spent_in_Country__c</fullName>
        <description>How many months were spent in this country?</description>
        <label>Months Spent in Country</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of Referee</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nationality</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Expertise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Hours__c</fullName>
        <label>Number of Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oral_Expression__c</fullName>
        <label>Oral Expression</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother Tongue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oral_Understanding__c</fullName>
        <label>Oral Understanding</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother Tongue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <description>Referee Organisation</description>
        <label>Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Expertise__c</fullName>
        <description>Other expertises</description>
        <label>Other Expertise</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <description>Language not yet in catalogue</description>
        <inlineHelpText>If the language is not available in the the catalog, please indicate the language here</inlineHelpText>
        <label>Other Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipName>Expertise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reading__c</fullName>
        <label>Reading</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother Tongue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Pulls down Region value for the Nationality. For use in Expert Search VF page, not displayed on Expertise record page layout.</description>
        <formula>TEXT( Entry_from_Catalog__r.Region_UN__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Referee Relationship</description>
        <inlineHelpText>Please specify the nature of relation (e.g. current supervisor; previous colleague, etc.)</inlineHelpText>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Referee Salutation</description>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaks_English_French_or_Spanish__c</fullName>
        <label>Speaks English, French, or Spanish</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <description>Referee Surname</description>
        <label>Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Number_1__c</fullName>
        <description>Referee Number 1</description>
        <label>Telephone Number 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_Number_2__c</fullName>
        <description>Back-up Referee Number</description>
        <label>Telephone Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title_Position__c</fullName>
        <label>Title/Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Referee title</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traditional_Justice_Def__c</fullName>
        <inlineHelpText>If you have selected &quot;Tradional justice system&quot;, please define</inlineHelpText>
        <label>Traditional Justice Def.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Knowledge__c</fullName>
        <inlineHelpText>Theor = Theoretical (e.g. study) ; Prof. = Professional</inlineHelpText>
        <label>Type of Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Theor.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Writing__c</fullName>
        <label>Writing</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother Tongue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Profile Record</label>
    <listViews>
        <fullName>All_Experts_Records</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Expert__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Entry_from_Catalog__c</columns>
        <columns>JRR_Language__c</columns>
        <columns>Other_Language__c</columns>
        <columns>Employer__c</columns>
        <columns>Degree_Name__c</columns>
        <columns>Course_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expert__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Expert Records</label>
    </listViews>
    <listViews>
        <fullName>All_Position_Records</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Position__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Entry_from_Catalog__c</columns>
        <columns>JRR_Language__c</columns>
        <columns>Other_Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Position Records</label>
    </listViews>
    <listViews>
        <fullName>All_Profile_Records</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Expert__c</columns>
        <columns>Position__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Entry_from_Catalog__c</columns>
        <columns>JRR_Language__c</columns>
        <columns>Other_Language__c</columns>
        <columns>Employer__c</columns>
        <columns>Degree_Name__c</columns>
        <columns>Course_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Profile Records</label>
    </listViews>
    <listViews>
        <fullName>Experts_All_Areas_of_Expertise</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Expert__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>AoE_Type__c</columns>
        <columns>Entry_from_Catalog__c</columns>
        <columns>Other_Expertise__c</columns>
        <columns>Explanation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expert__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Profile_Record__c.D_Area_of_Expertise</value>
        </filters>
        <label>Experts - All Areas of Expertise</label>
    </listViews>
    <listViews>
        <fullName>Experts_All_Nationalities</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Expert__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Entry_from_Catalog__c</columns>
        <columns>Passport_Number__c</columns>
        <columns>Passport_Expiry_Date__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expert__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Profile_Record__c.A_Nationality</value>
        </filters>
        <label>Experts - All Nationalities</label>
    </listViews>
    <nameField>
        <displayFormat>PFR-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Records</pluralLabel>
    <recordTypes>
        <fullName>A_Nationality</fullName>
        <active>true</active>
        <description>Record a Nationality</description>
        <label>A- Nationality</label>
    </recordTypes>
    <recordTypes>
        <fullName>B_JRR_Language</fullName>
        <active>true</active>
        <description>Record a JRR Language (English, French, Spanish or Arabic)</description>
        <label>B- JRR Language</label>
    </recordTypes>
    <recordTypes>
        <fullName>C_Other_Language</fullName>
        <active>true</active>
        <description>Record a Language (other than English, French, Spanish or Arabic)</description>
        <label>C- Other Language</label>
    </recordTypes>
    <recordTypes>
        <fullName>D_Area_of_Expertise</fullName>
        <active>true</active>
        <description>Record an Area of Expertise</description>
        <label>D- Area of Expertise</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_Legal_System_Expertise</fullName>
        <active>true</active>
        <description>Record a Legal System Expertise</description>
        <label>E- Legal System Expertise</label>
    </recordTypes>
    <recordTypes>
        <fullName>F_Country_Expertise</fullName>
        <active>true</active>
        <description>Record a Country Expertise</description>
        <label>F- Country Expertise</label>
    </recordTypes>
    <recordTypes>
        <fullName>G_Employment</fullName>
        <active>true</active>
        <description>Record an Employment</description>
        <label>G- Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>H_Education</fullName>
        <active>true</active>
        <description>Record an Education</description>
        <label>H- Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>I_Trainings_and_Qual</fullName>
        <active>true</active>
        <description>Record a Training and Qualification</description>
        <label>I- Trainings and Qual.</label>
    </recordTypes>
    <recordTypes>
        <fullName>J_Referee</fullName>
        <active>true</active>
        <description>Record a Referee (person of reference)</description>
        <label>J- Referee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Either_Expert_or_Position_required</fullName>
        <active>true</active>
        <description>Either EXPERT or POSITION must be filled out</description>
        <errorConditionFormula>OR(
  AND(
   ISBLANK( Expert__c ),
   ISBLANK( Position__c )
   ),
  AND(
   NOT(ISBLANK( Expert__c )),
   NOT(ISBLANK( Position__c ))
   )
)</errorConditionFormula>
        <errorDisplayField>Expert__c</errorDisplayField>
        <errorMessage>Either EXPERT or POSITION must be filled out</errorMessage>
    </validationRules>
</CustomObject>